anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/TEKCO_AnonymizationAuditLog__c.object-meta.xml
<CustomObject>
    <label>TEKCO Anonymization Audit Log</label>
    <nameField>
        <displayFormat>ANON-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TEKCO Anonymization Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>