anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_BrandFilter__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BrandFilter__c</fullName>
    <label>Brand Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>