anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_DocumentsDeleted__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_DocumentsDeleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Documents Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>