anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>