anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_JobId__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_JobId__c</fullName>
    <label>Async Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>