anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ObjectApiName__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>