anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_RecordsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>