anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_RunMode__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_RunMode__c</fullName>
    <description>How the run was scoped: BY_CRITERIA (brands, objects, record types) or BY_ID (explicit list of records). Replaces the previous discriminant, which read TEKCO_BrandFilter__c — a display label — with LIKE 'BY_ID%'. Blank on logs written before this field existed; the tool treats blank as BY_CRITERIA.</description>
    <label>Run Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BY_CRITERIA</fullName>
                <default>true</default>
                <label>By Criteria</label>
            </value>
            <value>
                <fullName>BY_ID</fullName>
                <label>By ID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>