anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_Status__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>