anonymization/main/default/objects/TEKCO_AnonymizationAuditLog__c/fields/TEKCO_TriggeredBy__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_TriggeredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>TEKCO Anonymization Audit Logs</relationshipLabel>
    <relationshipName>TEKCO_AnonymizationAuditLogs</relationshipName>
    <type>Lookup</type>
</CustomField>